--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
-    "reason-react": ">=0.7.0"
+    "react": "16.13.0",
+    "react-dom": "16.13.0",
+    "reason-react": "0.7.0"
   },
   "devDependencies": {
-    "bs-platform": "^7.1.1",
-    "moduleserve": "^0.9.0"
+    "bs-css": "11.0.0",
+    "bs-platform": "7.2.2",
+    "moduleserve": "0.9.1"
   }
 }
